--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <div class="col-md-8">
                         <div class="menú">
                             <ul class="nav justify-content-end">
+                              <li class="nav-item">
+                                <a class="nav-link active" href="index.html">Inicio</a>
+                              </li>
                                 <li class="nav-item">
                                   <a class="nav-link active" href="./views/servicios.html">Servicios</a>
                                 </li>
@@ -135,13 +138,13 @@
         <div class="container-fluid">
             <div class="footer">                
             <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="footer_contacto">
                         <h3>Consultas</h3>
                         <p>info@agenciasans.com</p> 
                         </div>                        
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="footer_redes">
                         <h3>¡Seguinos en nuestas redes!</h3>
                         <i class='fab fa-facebook' style='font-size:24px'></i>
@@ -149,14 +152,11 @@
                         <i class='fab fa-linkedin' style='font-size:24px'></i>
                         </div>
                     </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="footer_copyright">
-                        <h6>Copyright° Agencia Sans |2020 </h6>
-                    </div>
-                </div>
-                
+                    <div class="col-md-4">
+                      <div class="footer_copyright">
+                          <h6>Copyright° Agencia Sans | 2020 </h6>
+                      </div>
+                  </div>
             </div>
         </div>
     </div>        
